# olligobber.com

./: .gitignore  README.md  index.html  make.sh  makefile  post_ideas  test.html  test.typ
demo/: index.html  style.css
docs/: 404.html  atom.xml  index.html  style.css
docs/4d-proof/: index.html
docs/about/: index.html
docs/how-i-made-this-blog/: index.html
docs/nice-notation-binary-booleans/: index.html
docs/posts/: index.html
docs/tag/Geometry/: index.html
docs/tag/Haskell/: index.html
docs/tag/Joke/: index.html
docs/tag/Logic/: index.html
docs/tag/Maths/: index.html
docs/tag/PNP/: index.html
docs/tag/Post/: index.html
docs/tag/Test/: index.html
docs/tag/Typst/: index.html
docs/tag/Web/: index.html
docs/tags/: index.html
docs/test/: index.html
docs/test2/: index.html
docs/test3/: index.html
docs/test4/: index.html
generator/: makefile  sitegenerator.cabal
generator/app/: AllPosts.hs  Feed.hs  HomePage.hs  Main.hs  Post.hs  TaggedPosts.hs  Tags.hs
generator/lib/: Lib.hs
output/: CNAME
posts/: list
posts/4d-proof/: main.typ
posts/how-i-made-this-blog/: main.typ  template.typ
posts/nice-notation-binary-booleans/: main.typ
posts/test/: main.typ
static/: style.css
templates/: all_posts.html  all_tags.html  home_page.html  post.html  post_div.html  tag.html  tag_big.html  tagged_posts.html  template.typ
