cabal-version: 3.0
name: sitegenerator
version: 0.1.0.0
author: olligobber
maintainer: sirolligobbervii@yahoo.com.au
build-type: Simple

common warnings
	ghc-options: -Wall -Wno-tabs

executable sitegenerator
	import: warnings
	main-is: Main.hs
	build-depends:
		base ^>= 4.17.2.0,
		directory ^>= 1.3.9.0,
	hs-source-dirs: app
	default-language: Haskell2010
